src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/CD4AC0009.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram CD4AC0009 {
  enum E;
  class C;
  interface I1 extends C;
  interface I2 extends E;
  
}